# src/routes/service.route.js
@@ -30,6 +30,7 @@ const bodysiteRoutes = require("./body_site.route");
 const emrrefereneRoutes = require("./emr_reference_group.route");
 const commonRouter = require("./commonReference.route");
 const notetemplateRoutes = require("./note_templates.route");
+const proceduresRoutes = require("./procedures.route");
 
 
 const chiefComplaintsRouter = require('./chief.complaints.route');
@@ -77,6 +78,7 @@ serviceRouter.use('/immunizations', immunizationsRoutes);
 serviceRouter.use('/vitalMaster', vitalMasterRoutes);
 serviceRouter.use('/vitalLonic', vitallonicRoutes);
 serviceRouter.use('/notetemplate', notetemplateRoutes);
+serviceRouter.use('/procedures', proceduresRoutes);
 
 // Diagnosis Routes
 serviceRouter.use('/diagnosis', diagnosisRoutes);
